# Cogno

./: .dependency-cruiser.cjs  .gitignore  .output.txt  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  angular.json  biome.json  cursor_test_fail.txt  docs-playbook.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.md  setup-vitest.ts  test_output.txt  test_output_cle.txt  test_output_clo.txt  test_output_renderer.txt  test_output_resize.txt  test_output_theme.txt  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
scripts/: RELEASE.md  build-tauri-macos-signed-notarized.mjs  import-fig-specs.mjs  r2-setup.mjs  release-build.mjs  release-secrets.example.env  release-settings.example.json  updater-dev-server.mjs
scripts/fixtures/: updater-latest.json
src/: index.html  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.community.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.pro.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/cogno-tauri-core/: Cargo.toml
src-tauri/crates/cogno-tauri-core/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_identity.rs  cli.rs  config.rs  default_linux.config  default_macos.config  default_windows.config  http_server.rs  lib.rs  main.rs  settings.rs  settings_default.config
src-tauri/src/commands/: ai_http.rs  clipboard_image.rs  command_runner.rs  config.rs  crypto.rs  environment.rs  environment_builder.rs  fonts.rs  git_blob.rs  keyboard.rs  mod.rs  processes.rs  pty.rs  script.rs  shell_spawner.rs  shells.rs  window.rs
src-tauri/src/scripts/: bash.sh  fish.sh  powershell.ps1  zsh.sh
src/__mocks__/: _tauri-cli-action.ts  _tauri-fs.ts  _tauri-os.ts  _tauri-path.ts  _tauri-window.ts  api-path.ts  plugin-fs.ts  plugin-log.ts  plugin-os.ts  tauri-pty.ts
src/__test__/: test-factory.ts
src/__test__/mocks/: config-service.mock.ts  tauri-mock.factory.ts  terminal-mock.factory.ts  xterm-addon-ligatures-mock.ts
src/__test__/tauri_mocks/: _tauri-clipboard.ts  _tauri-db.ts  _tauri-default-config.ts  _tauri-keyboard-layout.ts  _tauri-logger.ts  _tauri-opener.ts  (+4 more)
src/app/: app.component.css  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  index.html  main.ts  package.json
src/community-features/: index.ts
src/core-host/: index.ts  package.json  side-menu-feature-registry.host.ts
src/core-sdk/: application-feature-collection.contract.ts  base-path.adapter.ts  command-palette.contract.ts  database-migration.contract.ts  filesystem.contract.ts  grid-layout.contract.ts  index.ts  notification.contract.ts  package.json  shell-context.contract.ts  shell-definition.contract.ts  shell-path-adapter-definition.contract.ts  side-menu-feature-definition.contract.ts  side-menu-feature-handle.contract.ts  side-menu-feature-registry.contract.ts  terminal-autocomplete.contract.ts
src/features-community/: community-application-feature.collection.ts  database-migrations.ts  index.ts  package.json
src/features-pro/: database-migrations.ts  index.ts  package.json
src/open-features/: database-migrations.ts  index.ts  package.json  side-menu-feature-definitions.ts
src/pro-features/: index.ts  package.json  side-menu-feature-definitions.ts
src/products/: active-product.ts  ai-detectable-provider-definitions.ts  product-definition.instance.ts  product-definition.ts  product-feature-collection.ts  product-side-menu-feature-definitions.ts  product.ts
src/ui-kit/: index.ts  package.json
tools/: patch-ng-vitest.js
(+4764 files in other folders)
