[package]
name = "Cogno"
version = "0.1.0"
description = "A Terminal"
authors = ["Lars Wolfram"]
edition = "2021"
license = "FSL-1.1-MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cogno_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-pty = "0.1.0"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
which = "5"
font-kit = "0.11"
rand = "0.8"
hex = "0.4"
ring = "0.16.20"
aes = "0.7"
cipher = "0.3"
block-modes = "0.8.1"
block-padding = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }

