[package]
name = "cogno"
version = "0.3.0"
description = "A terminal workspace for focused daily shell work"
authors = ["Lars Wolfram"]
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cogno_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cogno_tauri_core = { path = "crates/cogno-tauri-core" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2.4.2", features = ["watch"] }
tauri-plugin-log = "2.7.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
portable-pty = "0.8"
which = "5"
font-kit = "0.11"
rand = "0.8"
hex = "0.4"
ring = "0.16.20"
aes = "0.7"
cipher = "0.3"
block-modes = "0.8.1"
block-padding = "0.2"
dirs = "6.0.0"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
uuid = { version = "1.11", features = ["v4"] }
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }
