[package]
name = "cogno_tauri_core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
portable-pty = "0.8"
which = "5"
font-kit = "0.11"
rand = "0.8"
hex = "0.4"
ring = "0.16.20"
aes = "0.7"
cipher = "0.3"
block-modes = "0.8.1"
block-padding = "0.2"
dirs = "6.0.0"
uuid = { version = "1.11", features = ["v4"] }
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }
